# MG-MAMPOSSt

./: API.f  CMakeLists.txt  GasGal_mass.txt  MAM.f  Options.txt  README.md  Run_info.txt  barions.i  cluster.f90  data.i  datadnvn.i  datarv.i  datavdp.i  fort.12  fort.20  gomamposst_x.inp  gomamposstoptS.f  install_run.sh  models.py  paper.bib  paper.md  paramsoptS.i  plot.py  probs.i  requirements.txt  runMam_CLASH.sh  sr.i  test.e  test.py  test2.f90  testMAM.e  testMAM.f  test_kernel.f90  vkr.i
.github/workflows/: draft-pdf.yml
GamI/: CMakeLists.txt  angle.f  angleeq.f  arccos.f  atod.f  atoi.f  binser.f  bispline.f  bulelp.f  d1mach.f90  d9gmit.f90  d9lgic.f90  d9lgit.f90  d9lgmc.f90  dacosh.f  dbetai.f~  dcadre.f~  dcsevl.f90  dgami.f90  dgamit.f90  dgamlm.f90  dgamln.f90  dgamma.f90  dgamr.f90  dgaus8.f90  dlgams.f90  dlngam.f90  dotprd.f  drive.f  drive.f~  dtoa.f  ellip2.f  ellip3.f  ellip4.f  eqtogal.f  eqtosph.f  erfun2.f  fdump.f90  geoavg.f  histog.f  (+34 more)
JJin/: CMakeLists.txt  dincog.f  mairya.for  mairyb.for  mairyzo.for  maswfa.for  maswfb.for  mbernoa.for  mbernob.for  mbeta.for  mcchg.for  mcerror.for  mcerzo.for  mcgama.for  mch12n.for  mchgm.for  mchgu.for  mcik01.for  mciklv.for  mcikna.for  mciknb.for  mcikva.for  mcikvb.for  mcisia.for  mcisib.for  mcjk.for  mcjy01.for  mcjylv.for  mcjyna.for  mcjynb.for  mcjyva.for  mcjyvb.for  mclpmn.for  mclpn.for  mclqmn.for  mclqn.for  mcomelp.for  mcpbdn.for  mcpsi.for  mcsphik.for  (+90 more)
Newuoa/: CMakeLists.txt  bobyqa.f  main.e  main.f  out1
Output/: paper.md
Powell/: CMakeLists.txt  brent.f  f1dim.f  linmin.f  mnbrak.f  powell.f
Utili/: CMakeLists.txt  boot.f  dgammp.f  dgcf.f  dgser.f  gammarec.f  gl.f  indexx.f  linefit.f  reordr.f  robusti.f  special_function.f  xmidmean.f
input_pars/: pars_MACS.txt  pars_all_N_O_spec_DS  pars_all_N_O_spec_MACS  pars_test.txt
script/: script_Lib.sh  script_compile.sh  script_runmam.sh
test/: testAPI.f  testMAM.f
testpar/: Options.txt  R.i  datagasgal.i  datarv.i  free.i  oldbcg.f  omegas.i  paramcomm.i  params.i  paramsmam.i  paramsopt.i  paramsoptbcg.i  paramsxten.i  pars.txt  probs.i  sr.i  tsallis.i  units.i  vlos.i
